Predictions & Model Deployment

--- a/notebooks/05c_compare_models.ipynb
+++ b/notebooks/05c_compare_models.ipynb
@@ -68,8 +68,8 @@
     {
      "data": {
       "text/plain": [
-       "<Experiment: artifact_location=('file:///E:/Jupyter Notebooks/e2e_ds_project- Deena '\n",
-       " 'Gergis/notebooks/../models/mlruns/379493485091616815'), experiment_id='379493485091616815', lifecycle_stage='active', name='skills_jobs_stackoverflow', tags={}>"
+       "<Experiment: artifact_location=('file:///E:/Jupyter Notebooks/Tech Job '\n",
+       " 'Recommendation/notebooks/../models/mlruns/379493485091616815'), experiment_id='379493485091616815', lifecycle_stage='active', name='skills_jobs_stackoverflow', tags={}>"
       ]
      },
      "execution_count": 4,
@@ -92,6 +92,21 @@
     }
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:Malformed run '.trash'. Detailed error Yaml file '..\\models\\mlruns\\379493485091616815\\.trash\\meta.yaml' does not exist.\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\MR\\anaconda3\\lib\\site-packages\\mlflow\\store\\tracking\\file_store.py\", line 728, in _list_run_infos\n",
+      "    run_info = self._get_run_info_from_dir(r_dir)\n",
+      "  File \"C:\\Users\\MR\\anaconda3\\lib\\site-packages\\mlflow\\store\\tracking\\file_store.py\", line 560, in _get_run_info_from_dir\n",
+      "    meta = read_yaml(run_dir, FileStore.META_DATA_FILE_NAME)\n",
+      "  File \"C:\\Users\\MR\\anaconda3\\lib\\site-packages\\mlflow\\utils\\file_utils.py\", line 179, in read_yaml\n",
+      "    raise MissingConfigException(\"Yaml file '%s' does not exist.\" % file_path)\n",
+      "mlflow.exceptions.MissingConfigException: Yaml file '..\\models\\mlruns\\379493485091616815\\.trash\\meta.yaml' does not exist.\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -119,14 +134,14 @@
        "      <th>artifact_uri</th>\n",
        "      <th>start_time</th>\n",
        "      <th>end_time</th>\n",
-       "      <th>metrics.precision_score</th>\n",
-       "      <th>metrics.accuracy_score</th>\n",
        "      <th>metrics.recall_score</th>\n",
        "      <th>metrics.f1_score</th>\n",
-       "      <th>tags.mlflow.source.name</th>\n",
-       "      <th>tags.mlflow.runName</th>\n",
+       "      <th>metrics.accuracy_score</th>\n",
+       "      <th>metrics.precision_score</th>\n",
        "      <th>tags.mlflow.source.type</th>\n",
        "      <th>tags.mlflow.user</th>\n",
+       "      <th>tags.mlflow.runName</th>\n",
+       "      <th>tags.mlflow.source.name</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -135,51 +150,51 @@
        "      <td>31ae402b0ee14d82934009728f2c3caf</td>\n",
        "      <td>379493485091616815</td>\n",
        "      <td>FINISHED</td>\n",
-       "      <td>file:///E:/Jupyter Notebooks/e2e_ds_project- D...</td>\n",
+       "      <td>file:///E:/Jupyter Notebooks/Tech Job Recommen...</td>\n",
        "      <td>2023-03-04 10:45:27.398000+00:00</td>\n",
        "      <td>2023-03-04 10:45:58.229000+00:00</td>\n",
-       "      <td>48.911</td>\n",
-       "      <td>93.4135</td>\n",
        "      <td>10.833</td>\n",
        "      <td>14.907</td>\n",
-       "      <td>C:\\Users\\MR\\anaconda3\\lib\\site-packages\\ipyker...</td>\n",
-       "      <td>Random Forest: with PCA + Hyperparamter tuning</td>\n",
+       "      <td>93.4135</td>\n",
+       "      <td>48.911</td>\n",
        "      <td>LOCAL</td>\n",
        "      <td>MR</td>\n",
+       "      <td>Random Forest: with PCA + Hyperparamter tuning</td>\n",
+       "      <td>C:\\Users\\MR\\anaconda3\\lib\\site-packages\\ipyker...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2a39c333088247ffa3a7decaa137c6ba</td>\n",
        "      <td>379493485091616815</td>\n",
        "      <td>FINISHED</td>\n",
-       "      <td>file:///E:/Jupyter Notebooks/e2e_ds_project- D...</td>\n",
+       "      <td>file:///E:/Jupyter Notebooks/Tech Job Recommen...</td>\n",
        "      <td>2023-03-04 09:57:22.410000+00:00</td>\n",
        "      <td>2023-03-04 09:57:24.671000+00:00</td>\n",
-       "      <td>48.911</td>\n",
-       "      <td>93.4135</td>\n",
        "      <td>10.833</td>\n",
        "      <td>14.907</td>\n",
-       "      <td>C:\\Users\\MR\\anaconda3\\lib\\site-packages\\ipyker...</td>\n",
-       "      <td>Random Forest: with PCA - Basic</td>\n",
+       "      <td>93.4135</td>\n",
+       "      <td>48.911</td>\n",
        "      <td>LOCAL</td>\n",
        "      <td>MR</td>\n",
+       "      <td>Random Forest: with PCA - Basic</td>\n",
+       "      <td>C:\\Users\\MR\\anaconda3\\lib\\site-packages\\ipyker...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>427443c734fe4a39b555660d928690dc</td>\n",
        "      <td>379493485091616815</td>\n",
        "      <td>FINISHED</td>\n",
-       "      <td>file:///E:/Jupyter Notebooks/e2e_ds_project- D...</td>\n",
+       "      <td>file:///E:/Jupyter Notebooks/Tech Job Recommen...</td>\n",
        "      <td>2023-03-04 09:36:57.204000+00:00</td>\n",
        "      <td>2023-03-04 09:36:57.267000+00:00</td>\n",
-       "      <td>47.741</td>\n",
-       "      <td>93.5885</td>\n",
        "      <td>21.104</td>\n",
        "      <td>27.378</td>\n",
-       "      <td>C:\\Users\\MR\\anaconda3\\envs\\Pytorch-GPU CUDA113...</td>\n",
-       "      <td>Baseline model: Logistic Regression</td>\n",
+       "      <td>93.5885</td>\n",
+       "      <td>47.741</td>\n",
        "      <td>LOCAL</td>\n",
        "      <td>MR</td>\n",
+       "      <td>Baseline model: Logistic Regression</td>\n",
+       "      <td>C:\\Users\\MR\\anaconda3\\envs\\Pytorch-GPU CUDA113...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -192,34 +207,34 @@
        "2  427443c734fe4a39b555660d928690dc  379493485091616815  FINISHED   \n",
        "\n",
        "                                        artifact_uri  \\\n",
-       "0  file:///E:/Jupyter Notebooks/e2e_ds_project- D...   \n",
-       "1  file:///E:/Jupyter Notebooks/e2e_ds_project- D...   \n",
-       "2  file:///E:/Jupyter Notebooks/e2e_ds_project- D...   \n",
+       "0  file:///E:/Jupyter Notebooks/Tech Job Recommen...   \n",
+       "1  file:///E:/Jupyter Notebooks/Tech Job Recommen...   \n",
+       "2  file:///E:/Jupyter Notebooks/Tech Job Recommen...   \n",
        "\n",
        "                        start_time                         end_time  \\\n",
        "0 2023-03-04 10:45:27.398000+00:00 2023-03-04 10:45:58.229000+00:00   \n",
        "1 2023-03-04 09:57:22.410000+00:00 2023-03-04 09:57:24.671000+00:00   \n",
        "2 2023-03-04 09:36:57.204000+00:00 2023-03-04 09:36:57.267000+00:00   \n",
        "\n",
-       "   metrics.precision_score  metrics.accuracy_score  metrics.recall_score  \\\n",
-       "0                   48.911                 93.4135                10.833   \n",
-       "1                   48.911                 93.4135                10.833   \n",
-       "2                   47.741                 93.5885                21.104   \n",
+       "   metrics.recall_score  metrics.f1_score  metrics.accuracy_score  \\\n",
+       "0                10.833            14.907                 93.4135   \n",
+       "1                10.833            14.907                 93.4135   \n",
+       "2                21.104            27.378                 93.5885   \n",
        "\n",
-       "   metrics.f1_score                            tags.mlflow.source.name  \\\n",
-       "0            14.907  C:\\Users\\MR\\anaconda3\\lib\\site-packages\\ipyker...   \n",
-       "1            14.907  C:\\Users\\MR\\anaconda3\\lib\\site-packages\\ipyker...   \n",
-       "2            27.378  C:\\Users\\MR\\anaconda3\\envs\\Pytorch-GPU CUDA113...   \n",
+       "   metrics.precision_score tags.mlflow.source.type tags.mlflow.user  \\\n",
+       "0                   48.911                   LOCAL               MR   \n",
+       "1                   48.911                   LOCAL               MR   \n",
+       "2                   47.741                   LOCAL               MR   \n",
        "\n",
-       "                              tags.mlflow.runName tags.mlflow.source.type  \\\n",
-       "0  Random Forest: with PCA + Hyperparamter tuning                   LOCAL   \n",
-       "1                 Random Forest: with PCA - Basic                   LOCAL   \n",
-       "2            Baseline model: Logistic Regression                    LOCAL   \n",
+       "                              tags.mlflow.runName  \\\n",
+       "0  Random Forest: with PCA + Hyperparamter tuning   \n",
+       "1                 Random Forest: with PCA - Basic   \n",
+       "2            Baseline model: Logistic Regression    \n",
        "\n",
-       "  tags.mlflow.user  \n",
-       "0               MR  \n",
-       "1               MR  \n",
-       "2               MR  "
+       "                             tags.mlflow.source.name  \n",
+       "0  C:\\Users\\MR\\anaconda3\\lib\\site-packages\\ipyker...  \n",
+       "1  C:\\Users\\MR\\anaconda3\\lib\\site-packages\\ipyker...  \n",
+       "2  C:\\Users\\MR\\anaconda3\\envs\\Pytorch-GPU CUDA113...  "
       ]
      },
      "execution_count": 5,
@@ -232,6 +247,13 @@
     "runs = mlflow.search_runs([experiment.experiment_id])\n",
     "runs"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
